style: fix main content spacing

--- a/src/components/Layout/style.module.css
+++ b/src/components/Layout/style.module.css
@@ -5,5 +5,5 @@
 .main {
     display: flex;
     flex-direction: column;
-    padding: var(--header-height) 1.6rem 1.6rem;
+    padding: calc(var(--header-height) + 1.6rem) 1.6rem 1.6rem;
 }
